<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joao.desafioemprestimo.activities.EmprestarActivity">


    <LinearLayout
        android:id="@+id/lyt_top"
        android:layout_width="309dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_cobrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cobrar" />

        <Button
            android:id="@+id/button_devolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/devolver" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="364dp"
        android:layout_height="365dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyt_top">

        <TextView
            android:id="@+id/txt_nome_individuo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/edit_nome_individuo"
            android:layout_marginTop="10dp"
            android:text="@string/emprestei" />

        <EditText
            android:id="@+id/edit_nome_individuo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_nome_individuo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txt_nome_objeto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/edit_nome_individuo"
            android:layout_below="@+id/edit_nome_individuo"
            android:layout_marginTop="21dp"
            android:text="@string/nome_objeto" />

        <EditText
            android:id="@+id/edit_nome_objeto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txt_nome_objeto"
            android:layout_below="@+id/txt_nome_objeto"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txt_data_emprestimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/edit_nome_objeto"
            android:layout_centerVertical="true"
            android:text="@string/na_data" />

        <EditText
            android:id="@+id/edit_data_emprestimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txt_data_emprestimo"
            android:layout_below="@+id/txt_data_emprestimo"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/txt_data_devolucao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/edit_data_emprestimo"
            android:layout_below="@+id/edit_data_emprestimo"
            android:layout_marginTop="30dp"
            android:text="@string/data_prevista" />

        <EditText
            android:id="@+id/edit_data_devolucao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txt_data_devolucao"
            android:layout_below="@+id/txt_data_devolucao"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="date" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lyt_bottom"
        android:layout_width="324dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:layout_editor_absoluteY="449dp">

        <Button
            android:id="@+id/button_atualizar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.93"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/atualizar"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
